--- a/producto.html
+++ b/producto.html
@@ -263,7 +263,7 @@
     </body>
     <footer class="mt-3 p-5 justify-content-right">
         <!-- Contenido del pie de página -->
-        <a class="p-5 text-white fs-4" href="sobreNosotros.html">Sobre sobreNosotros</a>
+        <a class="p-5 text-white fs-4" href="sobreNosotros.html">Sobre Nosotros</a>
         <a class="p-5 text-white fs-4" href="contacto.html">Contacto</a>
     </footer>
 </html>
