--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="css/style.css" />
+        <!-- Fuente de letra -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <!-- Script -->
+        <script src="js/scripts.js"></script>
+        <script src="js/validaciones.js"></script>
         <title>Inicio</title>
     </head>
     <header>
@@ -58,17 +65,19 @@
 
                     <!-- Modal body -->
                     <div class="modal-body">
-                        <form>
+                        <form method="get" id="formulario-inicio-sesion" class="needs-validation" novalidate>
                             <div class="mb-3">
-                                <label for="username" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="username" placeholder="Ingresa tu nombre de usuario">
+                                <label for="nombre-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
+                                <input type="text" class="form-control fs-5" id="nombre-inicio-sesion" placeholder="Ingresa tu nombre de usuario" required>
+                                <div id="error-nombre" class="invalid-feedback" >Por favor ingresa tu nombre de usuario</div>
                             </div>
                             <div class="mb-3">
-                                <label for="password" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password" placeholder="Ingresa tu contraseña">
+                                <label for="contrasena-inicio-sesion" class="form-label fs-4">Contraseña</label>
+                                <input type="password" class="form-control fs-5" id="contrasena-inicio-sesion" placeholder="Ingresa tu contraseña" required>
+                                <div id="error-contrasena" class="invalid-feedback">Por favor ingresa tu contraseña</div>
                             </div>
                             <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary fs-4">Iniciar sesion</button>
+                                <button type="submit" class="btn btn-primary fs-4">Iniciar sesión</button>
                                 <button type="button" class="btn btn-secondary fs-4" data-bs-toggle="modal"
                                     data-bs-target="#registerModal">Registrarse</button>
                             </div>
