--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!-- Script -->
-        <script src="js/scripts.js"></script>
-        <script src="js/validaciones.js"></script>
         <title>Inicio</title>
     </head>
     <header>
@@ -66,15 +61,13 @@
                     <!-- Modal body -->
                     <div class="modal-body">
                         <form method="get" id="formulario-inicio-sesion" class="needs-validation" novalidate>
-                            <div class="mb-3">
-                                <label for="nombre-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="nombre-inicio-sesion" placeholder="Ingresa tu nombre de usuario" required>
-                                <div id="error-nombre" class="invalid-feedback" >Por favor ingresa tu nombre de usuario</div>
+                            <div class="mb-3 form-group">
+                                <label for="usuario-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
+                                <input type="text" class="form-control fs-5" id="usuario-inicio-sesion" name="usuario-inicio-sesion" placeholder="Ingresa tu nombre de usuario" >
                             </div>
-                            <div class="mb-3">
-                                <label for="contrasena-inicio-sesion" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="contrasena-inicio-sesion" placeholder="Ingresa tu contraseña" required>
-                                <div id="error-contrasena" class="invalid-feedback">Por favor ingresa tu contraseña</div>
+                            <div class="mb-3 form-group">
+                                <label for="password-inicio-sesion" class="form-label fs-4">Contraseña</label>
+                                <input type="password" class="form-control fs-5" id="password-inicio-sesion" name="password-inicio-sesion" placeholder="Ingresa tu contraseña" >
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary fs-4">Iniciar sesión</button>
@@ -101,21 +94,29 @@
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
-                        <form>
-                            <div class="mb-3">
-                                <label for="name" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="name" placeholder="Ingresa tu nombre de usuario">
+                        <form method="get" id="formulario-registro" class="needs-validation">
+                            <div class="mb-3 form-group">
+                                <label for="usuario-registro" class="form-label fs-4">Nombre de usuario</label>
+                                <input type="text" class="form-control fs-5" id="usuario-registro" name="usuario-registro" placeholder="Ingresa tu nombre de usuario">
+                            </div>
+                            <div class="mb-3 form-group">
+                                <label for="email-registro" class="form-label fs-4">Email</label>
+                                <input type="email"  class="form-control fs-5" id="email-registro" name="email-registro" placeholder="Ingresa tu email" required>                            </div>
+                            <div class="mb-3 form-group">
+                                <label for="password-registro" class="form-label fs-4">Contraseña</label>
+                                <div class="text-danger font-weight-bold" id="requerimiento-longitud"><p class="requerimiento">Al menos 8 caracteres</p></div>
+                                <div class="text-danger font-weight-bold" id="requerimiento-mayuscula"><p class="requerimiento">Al menos una letra mayúscula</p></div>
+                                <div class="text-danger font-weight-bold" id="requerimiento-minuscula"><p class="requerimiento">Al menos una letra minúscula</p></div>
+                                <div class="text-danger font-weight-bold" id="requerimiento-numero"><p class="requerimiento">Al menos un número</p></div>
+                                <div class="text-danger font-weight-bold" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p></div>                                
+                                <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
                             </div>
                             <div class="mb-3">
-                                <label for="email" class="form-label fs-4">Email</label>
-                                <input type="email" class="form-control fs-5" id="email" placeholder="Ingresa tu email">
-                            </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password" placeholder="Ingresa tu contraseña">
+                                <label for="password-registro-confirmar" class="form-label fs-4">Confirmar contraseña</label>
+                                <input type="password" class="form-control fs-5" id="password-registro-confirmar" name="password-registro-confirmar" placeholder="Confirma tu contraseña" required>
                             </div>
                             <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary fs-4" data-bs-dismiss="modal">Registrarse</button>
+                                <button type="submit" class="btn btn-primary fs-4">Registrarse</button>
                             </div>
                         </form>
                     </div>
@@ -251,5 +252,11 @@
         <a class="p-5 text-white fs-4" href="sobreNosotros.html">Sobre Nosotros</a>
         <a class="p-5 text-white fs-4" href="contacto.html">Contacto</a>
     </footer>
-
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!--jQuery validate-->
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <!-- Script -->
+    <script src="js/scripts.js"></script>
+    <script src="js/validaciones.js"></script>    
 </html>
